# torch_robotics

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: differentiable_kinematics.py  distance_field.py  fk_2_link_planar.py  forward_kinematics.py  inverse_dynamics.py  inverse_kinematics.py  self_collision_distance.py  test_fields.py  test_ik.py
robot_envs/base_envs/: env_base.py  obstacle_map_env.py  panda_env_7d.py  panda_env_base.py  planar_2_link_robot_obstacle_map_env.py  pointmass_env_base.py  utils.py
robot_envs/pybullet/: panda.py  panda_bullet_base.py
torch_kinematics_tree/geometrics/: euclidean.py  frame.py  manifold.py  quaternion.py  skeleton.py  spatial_vector.py  trajectory.py  utils.py
torch_kinematics_tree/models/: LICENSE  rigid_body.py  robot_tree.py  robots.py  utils.py
torch_kinematics_tree/utils/: files.py
torch_planning_objectives/fields/: collision_bodies.py  distance_fields.py  euclidean_distance_fields.py  primitive_distance_fields.py  shape_distance_fields.py
torch_robotics/environment/: env_base.py  env_circles_2d.py  env_dense_2d.py  env_dense_2d_extra_objects.py  env_grid_circles_2d.py  env_maze_boxes_3d.py  env_narrow_passage_dense_2d.py  env_planar2link.py  env_spheres_3d.py  env_spheres_3d_extra_objects.py  env_square_2d.py  env_table_shelf.py  env_table_shelf_3d.py  grid_map_sdf.py  object.py  objects.py  obstacle_map_env.py  planar2link_env.py  primitives.py  utils.py
torch_robotics/environments/: __init__.py  env_base.py  env_circle_2d.py  env_crazyflie_3d.py  (+26 more)
(+124 files in other folders)
