[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_robotics"
version = "0.1.0"
description = "Full Differentiable Kinematics Tree Implementation constructed from URDF"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "An Thai Le", email = "an@robot-learning.de"},
    {name = "Joao Carvalho", email = "joao@robot-learning.de"},
]
keywords = ["robotics", "kinematics", "urdf", "differentiable", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "urdf-parser-py>=0.0.4",
    "matplotlib>=3.7",
    "trimesh>=3.20",
    "einops>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/anindex/torch_robotics"

[tool.setuptools.packages.find]
include = ["torch_robotics*"]

[tool.setuptools.package-data]
torch_robotics = ["**/*.urdf", "**/*.yaml", "**/*.stl", "**/*.obj", "**/*.dae"]
